第二次更新

--- a/thesissystem-master/WebContent/Essay/admin/Add_tea.html
+++ b/thesissystem-master/WebContent/Essay/admin/Add_tea.html
@@ -15,7 +15,7 @@
 
 		<div id="wrappermiddle">
 
-			<h2>Add Teacher</h2>
+			<h2>增加教师</h2>
 			<br /><br />
       <form action="/thesis-system/TeacherAddServlet" method="post" >
 			<div class="addstu">
