--- a/thesissystem-master/WebContent/Essay/admin/admin_content_center.html
+++ b/thesissystem-master/WebContent/Essay/admin/admin_content_center.html
@@ -18,6 +18,6 @@
 		</style>
 	</head>
 	<body>
-		<label id="lable_">主页里没啥好看的，你还是去别的页面看一下吧！</label>
+		<label id="lable_">主页内容在开发中，敬请期待</label>
 	</body>
 </html>
