--- a/thesissystem-master/WebContent/Essay/student/menu.html
+++ b/thesissystem-master/WebContent/Essay/student/menu.html
@@ -33,9 +33,9 @@
 	<body>
 		<div id="admin_menu">
 			<ul class="nav nav-tabs">
-  				<li><a href="content_center.html"  target="center"  style="margin-left: 180px;">Home</a></li>
-  				<li><a href="/thesis-system/T_essay_name_infofind_servlet" target="center" >AllThesis</a></li>
- 				 <li><a href="/thesis-system/MyEssayServlet" target="center" >MyThesis</a></li>
+  				<li><a href="content_center.html"  target="center"  style="margin-left: 180px;">主页</a></li>
+  				<li><a href="/thesis-system/T_essay_name_infofind_servlet" target="center" >所有论文选择题库</a></li>
+ 				 <li><a href="/thesis-system/MyEssayServlet" target="center" >我选择的论文</a></li>
 			</ul>
 		</div>
 		
