--- a/thesissystem-master/WebContent/Essay/teacher/menu.html
+++ b/thesissystem-master/WebContent/Essay/teacher/menu.html
@@ -34,11 +34,11 @@
 	<body>
 		<div id="admin_menu">
 			<ul class="nav nav-tabs">
-  				<li><a href="content_center.html"  target="center" style="margin-left: 180px;">Home</a></li>
-  				<li><a href="add_essay.jsp"  target="center">AddTopic</a></li>
- 				 <li><a href="/thesis-system/TeaToEssay" target="center" >Topic</a></li>
- 				 <li><a href="/thesis-system/TeaToStuRequest" target="center"  >Application</a></li>
- 				 <li><a href="/thesis-system/TeaToViewAllStudent" target="center" >AllThesis</a></li>
+  				<li><a href="content_center.html"  target="center" style="margin-left: 180px;">主页</a></li>
+  				<li><a href="add_essay.jsp"  target="center">发布自己的论文题目</a></li>
+ 				 <li><a href="/thesis-system/TeaToEssay" target="center" >论文列表</a></li>
+ 				 <li><a href="/thesis-system/TeaToStuRequest" target="center"  >所以的申请者</a></li>
+ 				 <li><a href="/thesis-system/TeaToViewAllStudent" target="center" >已经被申请的论文</a></li>
 			</ul>
 		</div>
 		
