--- a/thesissystem-master/WebContent/Essay/admin/admin_menu.html
+++ b/thesissystem-master/WebContent/Essay/admin/admin_menu.html
@@ -52,11 +52,11 @@
 	<body>
 	<div id="admin_menu">
 			<ul class="nav nav-tabs">
-  				<li><a href="admin_content_center.html" style="margin-left: 180px;" target="center">Home</a></li>
-  				<li><a href="stu_add.html" target="center" >AddStudent</a></li>
- 				 <li><a href="/thesis-system/StuSelectServlet" target="center"  >StudentManage</a></li>
- 				 <li><a href="Add_tea.html" target="center">AddTeacher</a></li>
- 				 <li><a href="/thesis-system/TeaSelectServlet" target="center"  >TeacherManage</a></li>
+  				<li><a href="admin_content_center.html" style="margin-left: 180px;" target="center">主页</a></li>
+  				<li><a href="stu_add.html" target="center" >增加学生信息</a></li>
+ 				 <li><a href="/thesis-system/StuSelectServlet" target="center"  >学生管理</a></li>
+ 				 <li><a href="Add_tea.html" target="center">增加教师信息</a></li>
+ 				 <li><a href="/thesis-system/TeaSelectServlet" target="center"  >教师管理</a></li>
 			</ul>
 		</div>
 		
