--- a/thesissystem-master/WebContent/Essay/admin/stu_add.html
+++ b/thesissystem-master/WebContent/Essay/admin/stu_add.html
@@ -15,7 +15,7 @@
 
 		<div id="wrappermiddle">
 
-			<h2>Add Student</h2>
+			<h2>增加学生</h2>
 			<br /><br />
       <form action="/thesis-system/StudentAddServlet" method="post" >
 			<div class="addstu">
