--- a/thesissystem-master/WebContent/Essay/student/bottom.html
+++ b/thesissystem-master/WebContent/Essay/student/bottom.html
@@ -17,7 +17,7 @@
 	<body>
 		<div id="admin_bottom">
 			<div id="content">
-				Lanboolee❤2018.com  lanboolee@outlook.com
+				欢迎来到毕业论文选题系统：<p style="font-family:arial;">&copyright;  2016-2020 </p>
 			</div>
 		</div>
 	</body>
