--- a/thesissystem-master/WebContent/Essay/teacher/content_center.html
+++ b/thesissystem-master/WebContent/Essay/teacher/content_center.html
@@ -18,6 +18,6 @@
 		</style>
 	</head>
 	<body>
-		<label id="lable_">主页里没啥好看的，你还是去别的页面看一下吧！</label>
+		<label id="lable_">主页在开发中。。。。。！</label>
 	</body>
 </html>
